syntax = "proto3";

package ch10.ex1;

option java_package = "uk.me.uohiro.protobuf.model.ch10.ex1.v2";
option java_outer_classname = "VersioningAPIProto";
option java_multiple_files = true;
option optimize_for = SPEED;

service GreetingService {
	rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
	string english_greeting = 1;
	Name name = 2;	
	string japanese_greeting = 3;
}

message Name {
	string first_name = 1;
	string last_name = 2;
}

message HelloResponse {
	string english_reply = 1;
	string japanese_reply = 2;
}
